--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,13 @@ dependencies {
     compile 'com.google.inject:guice:3.0'
     compile 'com.google.inject.extensions:guice-servlet:3.0'
     compile 'org.eclipse.jetty:jetty-server:9.0.4.v20130625'
+    compile 'org.eclipse.jetty:jetty-webapp:9.0.4.v20130625'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.2.2'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.2.2'
+    compile 'joda-time:joda-time:2.2'
+    compile 'org.eclipse.jetty.websocket:websocket-server:9.0.4.v20130625'
+    compile 'io.vertx:vertx-platform:2.0.0-final'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile 'org.apache.httpcomponents:httpclient:4.2.3'
 }
